--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,10 @@
 <%- include('./Partials/header.ejs') %>
 
     <body>
-        <h1 class="header">This is A blog website</h1>
-        <%- include('./Partials/nav.ejs') %>
+        <main>
             <h2>The Home Page</h2>
-            <%- include('./Partials/footer.ejs') %>
+        </main>
+        <%- include('./Partials/footer.ejs') %>
     </body>
 
 </html>
