--- a/views/Partials/nav.ejs
+++ b/views/Partials/nav.ejs
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
-        <ul>
-        <li><a href="/">Home Page</a></li>
-        <li><a href="/about">About Page</a></li>
-        <li><a href="/contact">Contact Page</a></li>
-    </ul>
+        <ul> 
+            <li><a href="/">Blogs</a></li>
+            <li><a href="/about">About Page</a></li>
+            <li><a href="/newBlog">New Blog</a></li>
+        </ul>
     </nav>
 </body>
+
 </html>
