--- a/views/Partials/footer.ejs
+++ b/views/Partials/footer.ejs
@@ -3,7 +3,7 @@
     <a href='https://github.com/Wase-Zahin'>
         <img
             className='icon'
-            src="github-icon"
+            src="/github-icon"
             alt='github'>
         </img>
     </a>
