--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,26 @@
 
     <body>
         <main>
-            <h2>The Home Page</h2>
+            <h2 class="blogsHeader">All blogs</h2>
+            <div class="blogs">
+                <% if (blogs.length> 0) { %>
+                    <% blogs.forEach(blog=> { %>
+
+                        <div class="blogsItem">
+                            <a class="single"  href="/blogs/<%=blog._id %>">
+                                <h3 class="title">
+                                    <%= blog.title %>
+                                </h3>
+                                <p class="title">
+                                    <%= blog.snippet %>
+                                </p>
+                            </a>
+                        </div>
+                        <% }) %>
+                            <% } else { %>
+                                <p>There are no blogs to display...</p>
+                                <% } %>
+            </div>
         </main>
         <%- include('./Partials/footer.ejs') %>
     </body>
