--- a/views/newBlog.ejs
+++ b/views/newBlog.ejs
@@ -5,13 +5,14 @@
     <body>
         <main>
             <h2>Create a new blog!</h2>
-            <form>
+            <form action="/blogs" method="POST">
                 <label for="title">Title</label><br>
                 <input type="text" id="title" name="title"><br>
                 <label for="snippet">Snippet</label><br>
                 <input type="text" id="snippet" name="snippet"><br>
                 <label for="body">Blog body</label><br>
                 <textarea type="text" id="body" name="body"></textarea>
+                <button>Submit</button>
             </form>
         <main>
         <%- include('./Partials/footer.ejs') %>
